--- a/index.html
+++ b/index.html
@@ -210,9 +210,9 @@
     
     <div class="pastes-container" id="pastesContainer">
         <div class="paste-box">
-            <h2 class="box-title">Skidiot #1</h2>
+            <h2 class="box-title">Putty</h2>
             <div class="image-container">
-                <img src="https://via.placeholder.com/600x300/ff69f5/000000?text=Proof+Image" class="paste-image" alt="Proof">
+                <img src="https://files.catbox.moe/vhju3t.jpg" class="paste-image" alt="Proof">
             </div>
             <div class="paste-field">
                 <span class="field-label">Reason</span>
@@ -220,42 +220,42 @@
             </div>
             <div class="paste-field">
                 <span class="field-label">COM</span>
-                <div class="field-value">Discord messages</div>
+                <div class="field-value">All Of Em FR</div>
             </div>
             <div class="paste-field socials-field">
                 <span class="field-label">Socials</span>
                 <div class="field-value">
-                    <a href="https://twitter.com/CodeThief" target="_blank">twitter.com/CodeThief</a>
+                    <a href="erm nuh uh" target="_blank">nope</a>
                 </div>
             </div>
             <div class="paste-field">
                 <span class="field-label">Alias</span>
-                <div class="field-value">CodeThief</div>
+                <div class="field-value">superspookyfemboyofdoomfr</div>
             </div>
         </div>
         
         <div class="paste-box">
-            <h2 class="box-title">Skidiot #2</h2>
+            <h2 class="box-title">Kardi</h2>
             <div class="image-container">
-                <img src="https://via.placeholder.com/600x300/ff69f5/000000?text=Another+Proof" class="paste-image" alt="Proof">
+                <img src="https://files.catbox.moe/itdceu.jpg" class="paste-image" alt="Proof">
             </div>
             <div class="paste-field">
                 <span class="field-label">Reason</span>
-                <div class="field-value">Plagiarized project</div>
+                <div class="field-value">to fat</div>
             </div>
             <div class="paste-field">
                 <span class="field-label">COM</span>
-                <div class="field-value">Twitter DMs</div>
+                <div class="field-value">Discord, Vrc</div>
             </div>
             <div class="paste-field socials-field">
                 <span class="field-label">Socials</span>
                 <div class="field-value">
-                    <a href="https://github.com/CopyPasteKing" target="_blank">github.com/CopyPasteKing</a>
+                    <a href="pornhub.com" target="_blank">pornhub.com</a>
                 </div>
             </div>
             <div class="paste-field">
                 <span class="field-label">Alias</span>
-                <div class="field-value">CopyPasteKing</div>
+                <div class="field-value">fatters</div>
             </div>
         </div>
     </div>
