--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 <body>
     <div class="stars" id="starfield"></div>
 
-    <h1 class="main-title">Skidiots.lol</h1>
+    <h1 class="main-title">Skidiot.lol</h1>
     
     <div class="search-container">
         <input type="text" class="search-bar" id="searchBar" placeholder="Search pastes by name...">
