--- a/Contact/index.html
+++ b/Contact/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Me - Skidiot.lol</title>
-    <link rel="icon" href="Favi.ico" type="image/x-icon">
+    <title>Contact</title>
+    <link rel="icon" href="favi.png" type="image/png">
     <link href="https://fonts.googleapis.com/css2?family=Skranji:wght@400;700&family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -218,4 +218,3 @@
     </script>
 </body>
 </html>
-
